Uploaded image for project: 'JDK'
  1. JDK
  2. JDK-8020489

VM crash when non-existent interface method is called by invokespecial

XMLWordPrintable

    • 8
    • b49
    • Not verified

        Please use attached test sources to reproduce the issue:

        $ java -jar /java/re/asmtools/5.0/promoted/ea/b03/binaries/asmtools-5.0/lib/asmtools.jar jasm invokespecial01106m10n.jasm -d .
        invokespecial01106m10n.jasm:31: Warning: Wrong tag: Method expected.
                        invokespecial InterfaceMethod invokespecial01106m10ni.m:"()V";
                                                       ^
        1 warning

        $ javac -fullversion
        javac full version "1.8.0-ea-b98"

        $ javac -g:none invokespecial01106m1.java -d .

        $ java -showversion javasoft.sqe.tests.vm.instr.invokespecial.invokespecial011.invokespecial01106m1.invokespecial01106m1
        java version "1.8.0-ea"
        Java(TM) SE Runtime Environment (build 1.8.0-ea-b98)
        Java HotSpot(TM) Server VM (build 25.0-b40, mixed mode)

        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0xfe46d100, pid=23126, tid=2
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b98) (build 1.8.0-ea-b98)
        # Java VM: Java HotSpot(TM) Server VM (25.0-b40 mixed mode solaris-sparc )
        # Problematic frame:
        # V [libjvm.so+0x46d100] Method*DefaultMethods::find_super_default(Klass*,Klass*,Symbol*,Symbol*,Thread*)+0x778
        #
        # Core dump written. Default location: /home/ygaevsky/core or core.23126
        #
        # An error report file with more information is saved as:
        # /home/ygaevsky/hs_err_pid23126.log
        Phoning home...
        Using server: 10.161.186.18, port 4711
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #
        Abort (core dumped)

          1. invokespecial01106m1.java
            2 kB
            Yuri Gaevsky
          2. invokespecial01106m10n.jasm
            0.8 kB
            Yuri Gaevsky

              acorn Karen Kinnear (Inactive)
              ygaevsky Yuri Gaevsky (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: