8020489: VM crash when non-existent interface called by invokespecial

Reviewed-by: kamg, coleenp